# micro-weather-station-esp8266

./: README.md  micro-weather-platformio.code-workspace
.cargo/: config
arduino/ESP8266_DHT11_Standalone/: ESP8266_DHT11_Standalone.ino
platformio/blynk-dht11/src/: main.cpp
platformio/dht11-blynk/: platformio.ini
platformio/dht11-blynk/src/: main.cpp
platformio/mqtt-dht11/: platformio.ini
platformio/mqtt-dht11/src/: main.cpp
rust/: Cargo.toml
src/: main.rs
thingsboard/: .gitignore  docker-compose.yml  micro_weather_station.json
thingsboard/.mytb-logs/: gc.log.0.current
