[package]
name = "micro-weather-station-esp8266"
version = "0.1.0"
authors = ["Michael S. Huang <mhuang74@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtensa-lx-rt = "0.5.0"
xtensa-lx = "0.3.0"
panic-halt = "0.2.0"

esp8266-hal = { version = "0.4.0", optional = true }


embedded-hal = { version = "0.2.4", features = ["unproven"] }
esp8266 = "0.2.0"
nb = "0.1.3"
void = { version = "1.0.2", default-features = false }
paste = { version = "1.0", optional = true }
# esp8266-hal-proc-macros = { version = "=0.1.0", path = "procmacros" }

[features]
default = ["xtensa-lx-rt/lx106", "xtensa-lx/lx106", "esp8266-hal", "paste"]

